# cloudwatch-to-slack-lambda

./: .env.dist  .gitignore  .travis.yml  Cargo.toml  Dockerfile  LICENSE  README.md
.circleci/: config.yml
src/: main.rs
