[package]
name = "cloudwatch-to-slack-lambda"
version = "0.1.0"
authors = ["snowiow <marcel.patzwahl+github@posteo.de>"]
edition = "2018"

[dependencies]
lambda_runtime = "0.2.0"
aws_lambda_events = "0.2.1"
slack-hook = "0.8.0"
dotenv = "0.13.0"
simple_logger = "1.0.1"
log = "0.4.6"
base64 = "0.10.1"
flate2 = "1.0.6"
serde_json = "1.0.38"
